# AlgoEngine

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
config/: default.yaml
dashboard/: Dockerfile  package-lock.json  package.json  tsconfig.json
dashboard/src/: dashboard.ts
examples/: plugin_example.py
k8s/: configmap.yaml  dashboard.yaml  elasticsearch.yaml  engine.yaml  grafana.yaml  ingress.yaml  kibana.yaml  kustomization.yaml  logstash.yaml  monitor.yaml  namespace.yaml  prometheus.yaml  redis.yaml
logging/elasticsearch/: elasticsearch.yml  ilm_policy.json  index_template.json
logging/kibana/: export.ndjson  kibana.yml
logging/logstash/: logstash.yml  pipelines.yml
monitor/: Dockerfile  go.mod  main.go
monitoring/prometheus/: alerting_rules.yml  prometheus.yml
rust/: Cargo.toml
rust/src/: main.rs
scripts/: deploy.sh  setup_env.sh  start_live.sh  stop_live.sh
scripts/deploy/: aws.sh  azure.sh  gcp.sh
src/adapters/: __init__.py  alpha_vantage.py  crypto_broker.py  ig_broker.py  oanda_broker.py  simulated_broker.py  (+1 more)
tests/: conftest.py  test_backtest_engine.py  test_config.py  test_crypto_broker.py  test_data_cache.py  test_data_models.py  test_data_storage.py  test_error_handler.py  test_ig_broker.py  test_indicators.py  test_indicators_registry.py  test_latency_monitor.py  test_oanda_broker.py  test_order_router.py  test_plugin_loader.py  test_position_sync.py  test_strategy.py  test_strategy_manager.py  test_stream_cache.py  test_sync_manager.py  test_trading_models.py  test_websocket_feed.py
(+44 files in other folders)
