[package]
name = "algoengine-data"
version = "1.0.0"
edition = "2021"
description = "High-performance data processing module for AlgoEngine"
authors = ["AlgoEngine Team"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1